--- a/.github/workflows/pythonpackages.yml
+++ b/.github/workflows/pythonpackages.yml
@@ -20,26 +20,34 @@ on:
     branches: [ main ]
 
 jobs:
+
+  # 🤖 CI paragraph
+  #
+  # uncomment the content of this paragraph to activate the tests in GitHub CI
+  # - remove the 2 trailing characters "# ", do not change the spaces
+  #   (the `name` keys should be at the same level as the `uses` key)
+  #   (the `strategy` key should be at the same level as the `steps` key)
+
   build:
 
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-versions: [3.6 , 3.7]
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v1
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
+    - name: Say hello
       run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-    - name: Install package and test
-      run: |
-        make install test clean
+        echo "Hello, World!"
+    # - name: Set up Python ${{ matrix.python-version }}
+    #   uses: actions/setup-python@v1
+    #   with:
+    #     python-version: ${{ matrix.python-version }}
+    # - name: Install dependencies
+    #   run: |
+    #     python -m pip install --upgrade pip
+    #     pip install -r requirements.txt
+    # - name: Install package and test
+    #   run: |
+    #     make install test clean
 
     # strategy:
     #   matrix:
